--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "boxicons": "^2.1.4",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
