--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
     "boxicons": "^2.1.4",
+    "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
